# velog-cli

./: .gitignore  .ls-lint.json  .ls-lint.yml  .typos.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.ko.md  README.md  SECURITY.md  _typos.toml  lefthook.yml
.cargo/: config.toml
.claude/agents/: cli-advisor.md  reporter.md  ux-tester.md
.claude/commands/: cli-ux-test.md
.claude/references/: cli-ux-principles.md
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/workflows/: ci.yml  release.yml
docs/brainstorms/: 2026-03-10-ci-and-fixes-brainstorm.md  2026-03-10-rust-e2e-browser-testing-brainstorm.md  2026-03-10-velog-cli-brainstorm.md  2026-03-11-open-source-readiness-brainstorm.md  2026-03-11-output-format-brainstorm.md  2026-03-11-readme-brew-tap-and-lefthook-brainstorm.md  2026-03-12-feed-trending-brainstorm.md
docs/plans/: 2026-03-10-feat-e2e-browser-testing-plan.md  2026-03-10-feat-velog-cli-rust-implementation-plan.md  2026-03-10-fix-ci-and-code-review-plan.md  2026-03-11-feat-open-source-release-readiness-plan.md  2026-03-11-feat-output-format-flag-plan.md  2026-03-11-feat-readme-brew-tap-and-lefthook-plan.md  2026-03-11-fix-p1-code-review-findings-plan.md  2026-03-12-feat-trending-recent-user-posts-plan.md  2026-03-13-fix-cli-ux-improvements-plan.md  2026-03-15-feat-open-source-community-readiness-plan.md  2026-03-16-feat-open-source-trust-safety-hardening-plan.md
docs/solutions/integration-issues/: graphql-api-multiple-query-modes.md
docs/solutions/logic-errors/: learnings-audit.md  multi-agent-code-review-p1-p2-fixes.md  plan-review-checklist-rust-cli.md
docs/solutions/setup-and-dx-issues/: missing-brew-tap-and-precommit-hooks.md
src/: auth.rs  cli.rs  client.rs  handlers.rs  lib.rs  main.rs  models.rs  output.rs
src/client/: comment.rs  mod.rs  post.rs  search.rs  series.rs  social.rs  stats.rs  tag.rs
src/handlers/: auth_handlers.rs  comment.rs  mod.rs  post.rs  search.rs  series.rs  social.rs  stats.rs  tag.rs
src/models/: comment.rs  mod.rs  post.rs  search.rs  series.rs  social.rs  stats.rs  tag.rs
tests/: cli_tests.rs
