[package]
name = "velog-cli"
version = "0.3.3"
edition = "2021"
license = "MIT"
description = "Command-line interface for velog.io"
repository = "https://github.com/hamsurang/velog-cli"
homepage = "https://github.com/hamsurang/velog-cli"
keywords = ["velog", "blog", "cli", "markdown"]
categories = ["command-line-utilities"]
readme = "README.md"

[[bin]]
name = "velog"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# Async (minimal features for CLI)
tokio = { version = "1", features = ["rt", "macros"] }

# HTTP (explicit TLS backend, no system openssl dependency)
reqwest = { version = "0.12", default-features = false, features = [
    "json", "rustls-tls"
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"

# Directories
dirs = "5"

# Terminal output
comfy-table = "7"
colored = "2"
termimad = "0.30"

# Input
rpassword = "7"

# Slug generation (Korean → romanized ASCII via deunicode)
slug = "0.1"

# JWT payload decoding
base64 = "0.22"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[profile.dist]
inherits = "release"
lto = "thin"

[workspace.metadata.dist]
cargo-dist-version = "0.31.0"
ci = "github"
installers = ["homebrew"]
tap = "hamsurang/homebrew-velog-cli"
publish-jobs = ["homebrew"]
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu"]
allow-dirty = ["ci"]
